# docs/swagger.yaml
@@ -1,3 +1,13 @@
+definitions:
+  response.Response:
+    properties:
+      code:
+        type: integer
+      data:
+        type: object
+      msg:
+        type: string
+    type: object
 host: 127.0.0.1:9009
 info:
   contact:
@@ -29,4 +39,273 @@ paths:
           schema:
             type: string
       summary: 测试接口
+  /user/email/reset:
+    post:
+      consumes:
+      - application/json
+      description: 重置邮箱，根据邮件中验证码
+      parameters:
+      - description: email
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      - description: 验证码
+        in: body
+        name: validate_code
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Failure
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 重置邮箱
+  /user/email/reset/validate:
+    post:
+      consumes:
+      - application/json
+      description: 发送重置邮箱验证码邮件
+      parameters:
+      - description: email
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Failure
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 发送重置邮箱验证码邮件
+  /user/info:
+    post:
+      consumes:
+      - application/json
+      description: 编辑用户信息
+      parameters:
+      - description: "0"
+        in: body
+        name: sex
+        schema:
+          type: integer
+      - description: "20"
+        in: body
+        name: age
+        schema:
+          type: integer
+      - description: haha
+        in: body
+        name: user_name
+        schema:
+          type: string
+      - description: haha
+        in: body
+        name: name
+        schema:
+          type: string
+      - description: other info
+        in: body
+        name: info
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Failure
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 编辑用户信息
+  /user/login:
+    post:
+      consumes:
+      - application/json
+      description: 登录接口，通过email，手机号或用户名
+      parameters:
+      - description: email，手机号或用户名
+        in: body
+        name: log_id
+        required: true
+        schema:
+          type: string
+      - description: 密码（加密过的）
+        in: body
+        name: password_encrypt
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: code":200,"data":{"token":"token"},"msg":""}
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Failure
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 登录
+  /user/password/reset:
+    post:
+      consumes:
+      - application/json
+      description: 重置密码（已登录状态）
+      parameters:
+      - description: 密码（加密过的）
+        in: body
+        name: password_encrypt
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Failure
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 重置密码（已登录状态）
+  /user/password/reset/email:
+    post:
+      consumes:
+      - application/json
+      description: 重置密码（发送邮件方式），根据邮件中验证码
+      parameters:
+      - description: email
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      - description: 密码（加密过的）
+        in: body
+        name: password_encrypt
+        required: true
+        schema:
+          type: string
+      - description: 验证码
+        in: body
+        name: validate_code
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Failure
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 重置密码（发送邮件方式）
+  /user/password/reset/email/validate:
+    post:
+      consumes:
+      - application/json
+      description: 邮件发送重置密码验证码
+      parameters:
+      - description: 邮箱
+        in: query
+        name: email
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Failure
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 邮件发送重置密码验证码
+  /user/register/email:
+    post:
+      consumes:
+      - application/json
+      description: 邮件注册
+      parameters:
+      - description: 邮箱
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      - description: 验证码
+        in: body
+        name: validate_code
+        required: true
+        schema:
+          type: string
+      - description: 密码（加密过的）
+        in: body
+        name: password_encrypt
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Failure
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 邮件注册
+  /user/register/email/validate:
+    post:
+      consumes:
+      - application/json
+      description: 邮件发送注册验证码
+      parameters:
+      - description: 邮箱
+        in: query
+        name: email
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Failure
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 邮件发送注册验证码
 swagger: "2.0"
